--- a/css/map.css
+++ b/css/map.css
@@ -200,3 +200,15 @@ h2{
 	transform: translateX(30px);
 	transition: all 1s ease;
 }
+marquee{
+	color: orangered;
+	padding: 10px 0;
+	width: 100%;
+}
+
+#textemouvent{
+	background-color:rgba(0, 0, 0, 0.1);
+	height: 40px;
+	width: 100px;
+	text-align: center;
+}
